integrate baidu egle eye

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,12 +33,12 @@
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="z3BQE1cwyMUsXGhOLGkLV8PCps35QkW3" />
+            android:value="kmR1cPFV9as2gyzgAvo8u1UGWtkXwbmG" />
 
         <!-- start up activity -->
         <activity
             android:name=".LoadingActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,11 +47,11 @@
         </activity>
 
         <service android:name=".service.LocationService" />
+        
+        <service android:name="com.baidu.trace.LBSTraceService"
+                 android:enabled="true"
+                 android:process=":remote"/>
 
-        <activity
-            android:name=".Main2Activity"
-            android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
